--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -31,8 +31,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
     testImplementation 'com.tngtech.archunit:archunit:0.9.3'
+    testImplementation 'de.adesso:junit-insights:1.1.0'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.4.2'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'de.adesso.junitinsights.enabled', 'true'
 }
