--- a/adapters/web/build.gradle
+++ b/adapters/web/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation project(':common')
     implementation project(':application')
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    api 'org.springframework.boot:spring-boot-starter-web'
     
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
