--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 include 'common'
-include 'cashpal-configuration'
+include 'buckpal-configuration'
 
-include 'adapters:cashpal-web'
-include 'adapters:cashpal-persistence'
-include 'cashpal-application'
-include 'cashpal-testdata'
+include 'adapters:buckpal-web'
+include 'adapters:buckpal-persistence'
+include 'buckpal-application'
+include 'buckpal-testdata'
