added example configuration parameter to show how to "cleanly" inject configuration parameters into the application

--- a/buckpal-configuration/build.gradle
+++ b/buckpal-configuration/build.gradle
@@ -4,6 +4,9 @@ plugins {
 
 dependencies {
 
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    
     implementation project(':common')
     implementation project(':buckpal-application')
     implementation project(':adapters:buckpal-persistence')
