updated README with prerequisites

--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,9 @@ subprojects {
         }
     }
 
+    compileJava {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
 }
