--- a/adapters/buckpal-persistence/build.gradle
+++ b/adapters/buckpal-persistence/build.gradle
@@ -2,11 +2,9 @@ dependencies {
     implementation project(':common')
     implementation project(':buckpal-application')
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
+        exclude(module: 'spring-boot-starter')
+    }
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit' // excluding junit 4
