--- a/buckpal-application/build.gradle
+++ b/buckpal-application/build.gradle
@@ -1,10 +1,10 @@
 dependencies {
     implementation project(':common')
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework:spring-context'
 
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.hibernate:hibernate-validator:6.1.3.Final'
+    implementation 'org.glassfish:javax.el:3.0.0'
 
     implementation 'javax.transaction:javax.transaction-api'
 
