--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id "io.spring.dependency-management" version "${dependency_management_version}"
 }
 
 subprojects {
@@ -17,7 +17,7 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:2.1.9.RELEASE")
+            mavenBom("org.springframework.boot:spring-boot-dependencies:${springboot_version}")
         }
     }
 
