--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,20 @@
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+}
+
 plugins {
     id "io.spring.dependency-management" version "${dependency_management_version}"
 }
 
-subprojects {
 
-    group = 'io.reflectoring.reviewapp'
-    version = '0.0.1-SNAPSHOT'
+allprojects {
+	group = 'io.reflectoring.reviewapp'
+	version = '0.0.1-SNAPSHOT'
+}
+
+subprojects {
 
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
