--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-    implementation 'org.springframework:spring-context'
-    implementation 'javax.validation:validation-api'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
