--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '2.4.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
@@ -7,41 +8,32 @@ plugins {
 group = 'io.reflectoring.buckpal'
 version = '0.0.1-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'java-library'
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
-compileJava {
-    sourceCompatibility = 11
-    targetCompatibility = 11
-}
+sourceCompatibility = 11
 
 dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation ('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'junit' // excluding junit 4
-    }
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.tngtech.archunit:archunit:0.16.0'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.4.2'
-    testImplementation 'com.h2database:h2'
 
     runtimeOnly 'com.h2database:h2'
-
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
-
