--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.3'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
@@ -16,8 +16,8 @@ repositories {
 }
 
 compileJava {
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = 17
+    targetCompatibility = 17
 }
 
 dependencies {
@@ -28,13 +28,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'junit' // excluding junit 4
-    }
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
-    testImplementation 'com.tngtech.archunit:archunit:0.16.0'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.4.2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
+    testImplementation 'com.tngtech.archunit:archunit:1.0.1'
     testImplementation 'com.h2database:h2'
 
     runtimeOnly 'com.h2database:h2'
